--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
+
+
+                                    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-7JK55FD5HG"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-7JK55FD5HG'); </script>
 <script>
 function w3_open() {
   document.getElementById("mySidebar").style.display = "block";
